--- a/Bio.html
+++ b/Bio.html
@@ -8,7 +8,7 @@
     <body>
     <h1>A Bit About Myself...</h1>
     
-    <p><span>I am a senior studying Cognitive and Brain Science</span> at Tufts University in Medford, MA. Studying the fascinatingly complex
+    <p><span class="bold">I am a senior studying Cognitive and Brain Science</span> at Tufts University in Medford, MA. Studying the fascinatingly complex
     nature of the human mind has remained an exciting and humbling experience. I am passionate about researching and demystefying
     the tangeled mess that is human perception and behavior. As I inch closer to graduation day, I look forward to pursuing
     a field in which I can research how people and technology may interact to facilitate collaboration, learning, and innovation. 
