--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type= "text/css" media= "screen" href= "Bio.css"/>
+    <link rel="stylesheet" type= "text/css" media= "screen" href= "bio.css"/>
     <title>About Me</title>
   </head>
     <body>
