--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,7 @@
     but I am much better at eating. 
     </p>
     
-    <p>Curious about my research and work background? Feel free to take a look at my <a href="Resume.html">Resume</a></p>
+    <p>Curious about my research and work background? Feel free to take a look at my <a href="resume.html">Resume</a></p>
     
     </body>
 </html>
