--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset=utf-8 />
     <link rel="stylesheet" type= "text/css" media= "screen" href= "bio.css"/>
     <title>About Me</title>
   </head>
